# Industrial-Defect-CV-System

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/pages/: 1_Detection.py  2_GradCAM.py  3_Benchmark.py
configs/dataset/: mvtec_subset.yaml  yolo_mvtec.yaml
configs/model/: resnet18.yaml  yolo_v8n.yaml
configs/train/: resnet_train.yaml  yolo_train.yaml
data/processed/: dataset.yaml
docker/: Dockerfile  docker-compose.yml
docs/:  CLINE_dataset_download.md  CLINE_DAY1_REPAIR.md  CLINE_DAY1_SETUP_PROJECT_ENV.md  architecture.md  benchmark.md  cline_day2_yolo_hotfix.md  cline_day2_yolov8n_training.md  cline_task_prepare_mvtec_yolo_direct_processed.md  dataset_conversion.md  deployment.md  interview_notes.md
scripts/: benchmark_latency.py  eval_resnet.py  eval_yolo.py  export_onnx.py  generate_report.py  mask_to_yolo_bbox.py  prepare_mvtec.py  train_resnet.py  train_yolo.py
src/defect_cv/: __init__.py
src/defect_cv/deployment/: __init__.py
src/defect_cv/explainability/: __init__.py
src/defect_cv/utils/: seed.py
src/defect_cv/visualization/: report.py
tests/: test_dataset.py  test_latency_profiler.py  test_mask_to_bbox.py  test_onnx_infer.py
